--- a/templates/object.html
+++ b/templates/object.html
@@ -18,12 +18,11 @@
         </tr>
         {% for object in objects%}
             
-            <tr>
-                
+            <tr>  
                 <td><a href="/object/{{object.obj_id}}">{{ object.obj_id }}</a></td>
                 <td><a href="/object/{{object.obj_id}}">{{ object.obj_name }}</a></td>
                 <td><a href="/object/{{object.obj_id}}">{{ object.obj_status}}</a><br>
-                <button name="statusBtn">Change status</button></td>
+                <a href="/object/{{object.obj_id}}/changeStatus"><button name="statusBtn">Change status</button></td></a>
             </tr>
 
         {% endfor %}
