--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 body, html {
     margin: 0;
     font-family: sans-serif;
-    background-color:white;
+    background-color:#2e2f33;
 }
 
 .content {
@@ -10,7 +10,7 @@ body, html {
 }
 
 table, td, th {
-    border: 1px solid #aaa;
+    border: 1px solid #2e2f33;
 }
 
 table {
@@ -38,15 +38,29 @@ td {
 .object-bar{
     width: 90%;
     padding: 1rem;
-    background-color: #FFFFFF;
+    background-color: #2e2f33;
     justify-content: space-between;
     /* overflow-x: scroll; */
 }
 .center{
     text-align: center;
-    
 }
-
 .card-height{
-    height: 100%;
+    height: 500px;
+}
+.card-object{
+    width: 95%;
+    padding: 1%;
+    background-color: #3b3c42;
+}
+.bottom{
+    position: absolute;
+    bottom: 5%;
+}
+.card{
+    background-color: #3b3c42;
+    border: 1px solid;
+    border-color: rgb(235, 254, 255);
+    box-shadow: 1px 1px 5px 2px rgb(0, 255, 242);
+    color: #ffffff;
 }
