--- a/templates/object2.html
+++ b/templates/object2.html
@@ -13,31 +13,35 @@
         {% for object in objects%}
       <div class="col-md-6">
         <div class="card card-height" >
-
           <div class="card-object center"><br>
               <h4 class="card-title" >{{ object.obj_name }}</h4>
               <h5 class="card-text" > {{ object.obj_status }} </h5>
           </div>
           <br>
-          <div class="card-object center">
-            <h5 >{{ object.obj_name }}'s Sensor</h5>
-              <div class="row">
+          <div class="card-object">
+            <h4 class="left">{{ object.obj_name }}'s Sensor</h4>
+            <br>
+              <div class="row left">
                 {% for s in sensors %}
                     {% for sensor in s %}
                         {% if sensor.obj_id == object.obj_id %}
-                        <!-- <div class="col-md-5"> -->
-                            <div class="card-body" >
-                                <h5 class="card-title">{{ sensor.sensor_name}}</h5>
+                        <!-- <div class="col-md-4"> -->
+                            <div class="left" >
+                                <h5 class="col-md-4 card-title " style="display: inline;">{{ sensor.sensor_name}}</h5>
                                 {% if sensor.sensor_name == "LDR" %}
-                                    <h6>{{ lightData }}</h6>
+                                    <h6 class="col-md-4" style="display: inline;">{{ lightData }} %</h6>
                                 {% elif sensor.sensor_name == "Temperature" %}
-                                    <h6>{{ tempData }}</h6>
+                                    <h6 class="col-md-4" style="display: inline;">{{ tempData }} °C</h6>
                                 {% elif sensor.sensor_name == "Humidity" %}
-                                    <h6>{{ humidityData }}</h6>
+                                    <h6 class="col-md-4" style="display: inline;">{{ humidityData }}</h6>
                                 {% elif sensor.sensor_name == "Dust" %}
-                                    <h6>{{ dustData }}</h6>
+                                    <h6 class="col-md-4" style="display: inline;">{{ pm25Data }} µg/m³</h6>
                                 {% endif %}
-                            </div>
+                                <br>
+                                <br>
+                            </div><hr/>
+                            <br>
+                            
                         <!-- </div> -->
                         {% endif %}
                     {% endfor %}
@@ -46,12 +50,10 @@
           </div>
           <div class="card-object center bottom">
             <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-              <button type="button" class="btn btn-primary">Open</button>
-              <button type="button" class="btn btn-success" >Close</button>
+              <a href="/object/{{object.obj_id}}/status/open"><button type="button" class="btn btn-primary">Open</button></a>
+              <a href="/object/{{object.obj_id}}/status/close"><button type="button" class="btn btn-success" >Close</button></a>
             </div>
           </div>
-
-
         </div>
       </div>
       <br>
