--- a/templates/status.html
+++ b/templates/status.html
@@ -7,7 +7,8 @@
 
 {% block body %}
 <div class="content">
-    
+    <br>
+    <h3 style="color: aliceblue;"> loading ... </h3>
 </div>
 {% endblock %}
 
