--- a/templates/object2.html
+++ b/templates/object2.html
@@ -52,6 +52,7 @@
             <div class="btn-group" role="group" aria-label="Basic mixed styles example">
               <a href="/object/{{object.obj_id}}/status/open"><button type="button" class="btn btn-primary">Open</button></a>
               <a href="/object/{{object.obj_id}}/status/close"><button type="button" class="btn btn-success" >Close</button></a>
+              <a href="/object/{{object.obj_id}}/setup"><button type="button" class="btn btn-success" >Setup</button></a>
             </div>
           </div>
         </div>
