add back button

--- a/templates/setup.html
+++ b/templates/setup.html
@@ -22,10 +22,10 @@
             {% for object in objects %}
               <div class="left" >
                   <h6 style="display: inline;">
-                    When  <h6 style="display: inline;">{{get_sensor_name_by_setup_id(object.obj_id)}}  </h6>
-                    is  <h6 style="display: inline;">{{object.obj_setup_sign}} </h6> 
-                    than or equal to  <h6 style="display: inline;">{{object.obj_setup_value}}</h6> <span  style="display: inline;">%</span>
-                    make  <h6 style="display: inline;">{{object.obj_setup_status}} </h6>
+                    When <h6 style="display: inline;">{{get_sensor_name_by_setup_id(object.obj_id)}}  </h6>
+                    sensor is <h6 style="display: inline;">{{object.obj_setup_sign}} </h6> 
+                    than or equal to <h6 style="display: inline;">{{object.obj_setup_value}}</h6> <span  style="display: inline;">%</span>
+                    make <h6 style="display: inline;">{{object.obj_setup_status}} </h6>
                     <div class="custom-select">
                       <a href="/object/{{object.obj_id}}/setup/delete/{{object.obj_setup_id}}"><button type="button" class="btn btn-danger">delete</button></a>
                     </div>
@@ -40,7 +40,7 @@
           <div class="row left">
             <div class="left" >
               <form class="form-inline" action="/object/{{id}}/setup" method="POST">
-                <label>When   </label>
+                <label>When </label>
                 <div class="custom-select" style="width:200px;">
                   <select id="id" name="id">
                     {% for sensor in sensors %}
@@ -48,7 +48,7 @@
                     {% endfor %}
                   </select>
                 </div>
-                <label>is</label>
+                <label>sensor is</label>
                 <div class="custom-select" style="width:200px;">
                   <select name="sign">
                     <option value="more">more</option>
@@ -58,7 +58,7 @@
                 <label>than or equal to </label>
                 <input type="number" style="width:80px; display: inline;"  min="0" max="100" name="value">
                 <span  style="display: inline;">%</span>
-                <label>make </label>
+                <label>make {{ name }}</label>
                 <div class="custom-select" style="width:200px;">
                   <select name="status">
                     <option value="close">close</option>
@@ -75,6 +75,9 @@
             </div>
             <hr/>
             <br>
+          </div>
+          <div class="row right"> 
+            <button class="btn btn-back">back</button>
           </div>
 
         </div>
