--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,6 +50,12 @@ td {
     padding-left: 50px;
     padding-right: 50px;
 }
+.right{
+    text-align: right;
+    padding-left: 50px;
+    padding-right: 50px;
+    
+}
 .card-height{
     height: 500px;
 }
@@ -91,4 +97,16 @@ td {
 .custom-select{
     position: relative;
     display: inline;
+}
+
+.btn-back{
+    text-align: center;
+    background-color: #3b3c42;
+    border: 1px solid;
+    border-color: rgb(235, 254, 255);
+    box-shadow: 1px 1px 5px 2px rgb(0, 255, 242);
+    color: #ffffff;
+    width: 70px;
+    position: relative;
+    
 }
