--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<meta http-equiv = "refresh" content = "1; url = /" />
+<meta http-equiv = "refresh" content = "1; url = /object/{{id}}/setup" />
 <title>Window62</title>
 {% endblock %}
 
