change to new html page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,113 +4,8 @@
 }
 body, html {
     margin: 0;
-    font-family: sans-serif;
+    /*font-family: sans-serif;*/
     background-color:#2e2f33;
-}
-
-.content {
-    margin: 0 20px;
-    width: 400px;
-}
-
-table, td, th {
-    border: 1px solid #2e2f33;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-th {
-    height: 30px;
-}
-
-td {
-    text-align: center;
-    padding: 5px;
-}
-
-.form {
-    margin-top: 20px;
-}
-
-#content {
-    width: 70%;
-}
-
-.object-bar{
-    width: 90%;
-    padding: 1rem;
-    background-color: #2e2f33;
-    justify-content: space-between;
-    /* overflow-x: scroll; */
-}
-.center{
-    text-align: center;
-}
-.left{
-    text-align: left;
-    padding-left: 50px;
-    padding-right: 50px;
-}
-.right{
-    text-align: right;
-    padding-left: 50px;
-    padding-right: 50px;
-    
-}
-.card-height{
-    height: 500px;
-}
-.card-object{
-    width: 95%;
-    background-color: #3b3c42;
-}
-.bottom{
-    position: absolute;
-    bottom: 5%;
-}
-.card{
-    background-color: #3b3c42;
-    border: 1px solid;
-    border-color: rgb(235, 254, 255);
-    box-shadow: 1px 1px 5px 2px rgb(0, 255, 242);
-    color: #ffffff;
-}
-.cardsetup{
-    background-color: #3b3c42;
-    border: 1px solid;
-    border-color: rgb(235, 254, 255);
-    box-shadow: 1px 1px 5px 2px rgb(0, 255, 242);
-    color: #ffffff;
-    padding-bottom: 5%;
-}
-.form-inline {  
-    flex-flow: row wrap;
-    align-items: center;
-  }
-.form-inline label {
-    margin: 5px 10px 5px 0;
-  }
-.box{
-    padding-left: 5%;
-    padding-right: 5%;
-    color: #ffffff;
-}
-.custom-select{
-    position: relative;
-    display: inline;
-}
-
-.btn-back{
-    text-align: center;
-    background-color: #3b3c42;
-    border: 1px solid;
-    border-color: rgb(235, 254, 255);
-    box-shadow: 1px 1px 5px 2px rgb(0, 255, 242);
-    color: #ffffff;
-    width: 70px;
-    position: relative;
-    
+    height: 100vh;
+    color: white;
 }
