--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">    
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page1.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/control.css') }}">
     {% block head %}{% endblock %}
 </head>
 <body>
