--- a/templates/control.html
+++ b/templates/control.html
@@ -55,7 +55,7 @@
               {% endfor %}
           </div>
       </div>
-
+      <a href="/object/{{object.obj_id}}/setup">
       <button class="set-box">
           <div class="row" >
             <p class="col">Set Condition</p>
@@ -64,7 +64,7 @@
                       <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/>
                     </svg></p></div>
       </button>
-
+      </a>
       <button class="set-box">
           <div class="row">
             <p class="col">Set Time</p>
