--- a/templates/settime.html
+++ b/templates/settime.html
@@ -3,110 +3,145 @@
 {% block head %}
 
 <title>Window62</title>
+
 {% endblock %}
 
 {% block body %}
   <div class="head" >
+    <a href="/">
       <button class="head-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-left-circle" viewBox="0 0 16 16" color="white">
               <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
           </svg>
-      </button>
+      </button></a>
       <h1 class="head-text" >Window 1 Control</h1>
+
   </div>
 
   <div class="container">
     <h3 class="">Setup</h3>
-    <div class="cardsetup-box">
+    <span id="clock"></span>
+    <script>
+(function () {
 
+  var clockElement = document.getElementById( "clock" );
+
+  function updateClock ( clock ) {
+    var options = { hour12: false };
+    clock.innerHTML = new Date().toLocaleTimeString('en-US', options);
+  }
+
+  setInterval(function () {
+      updateClock( clockElement );
+  }, 1000);
+
+}());</script>
+    <div class="cardsetup-box">
+    {% for obj in objects %}
       <div class="row center d-flex align-items-center" >
         <div class="col-2 flex-left">
-          <h4>Open</h4>
+          <h4>{{obj.obj_ts_value}}</h4>
         </div>
         <div class="col-3 flex-left">
-          <h4>09 </h4><h4> : </h4><h4> 30</h4>
+          <h4>{{obj.obj_ts_hour}} </h4><h4> : </h4><h4> {{obj.obj_ts_min}}</h4>
         </div>
 
         <div class="col-6 flex-left">
+          {% set days=obj.get_days() %}
+          {% if 0 in days %}
           <label class="day">
             <span class="checkmark">Mon</span>
           </label>
+          {% endif %}
+          {% if 1 in days %}
           <label class="day">
             <span class="checkmark">Tue</span>
           </label>
+          {% endif %}
+          {% if 2 in days %}
           <label class="day">
             <span class="checkmark">Wed</span>
           </label>
+          {% endif %}
+          {% if 3 in days %}
           <label class="day">
             <span class="checkmark">Thu</span>
           </label>
+          {% endif %}
+          {% if 4 in days %}
           <label class="day">
             <span class="checkmark">Fri</span>
           </label>
+          {% endif %}
+          {% if 5 in days %}
           <label class="day">
             <span class="checkmark">Sat</span>
           </label>
+          {% endif %}
+          {% if 6 in days %}
           <label class="day">
             <span class="checkmark">Sun</span>
           </label>
+          {% endif %}
         </div>
         <div class="col-1 flex-left">
+          <a href="/object/{{obj.obj_id}}/setup/delete/{{obj.obj_ts_id}}">
           <button class="btn-del">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16" color="white">
               <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
             </svg>
           </button>
+          </a>
         </div>
       </div><hr>
-
+      {% endfor %}
       <div class="row center">
-        <form class="form-inline d-flex align-items-center" action="/object/{{id}}/setup" method="POST">
+        <form class="form-inline d-flex align-items-center" action="/object/{{id}}/settime" method="POST">
           <div class="col-2 ">
             <div class="custom-select" style="min-width:200px;">
-              <select id="id" name="id">
+              <select id="id" name="status">
                 select status
-                <option value="">open</option>
-                <option value="">close</option>
+                <option value="open">open</option>
+                <option value="close">close</option>
               </select>
             </div>
             <label> &emsp; at time</label>
           </div>
           <div class="col-3  flex-left">
             <div style="display: inline-block;">
-              <input class="custom-input" type="number" style="width:80px; display: inline;"  min="0" max="100" name="value">
+              <input class="custom-input" type="number" style="width:80px; display: inline;"  min="0" max="23" name="hour">
               <label> : </label>
-              <input class="custom-input" type="number" style="width:80px; display: inline;"  min="0" max="100" name="value">
+              <input class="custom-input" type="number" style="width:80px; display: inline;"  min="0" max="59" name="min">
             </div>
           </div>
-
           <div class="col-6 flex-left">
             <div class="">
               <label class="dayselect">
-                <input type="checkbox" checked="checked">
+                <input type="checkbox" name="mon" value=0>
                 <span class="checkmark">Mon</span>
               </label>
               <label class="dayselect">
-                <input type="checkbox">
+                <input type="checkbox" name="tue" value=1>
                 <span class="checkmark">Tue</span>
               </label>
               <label class="dayselect">
-                <input type="checkbox">
+                <input type="checkbox" name="wed" value=2>
                 <span class="checkmark">Wed</span>
               </label>
               <label class="dayselect">
-                <input type="checkbox">
+                <input type="checkbox" name="thu" value=3>
                 <span class="checkmark">Thu</span>
               </label>
-              <label class="dayselect">
+              <label class="dayselect" name="fri" value=4>
                 <input type="checkbox">
                 <span class="checkmark">Fri</span>
               </label>
               <label class="dayselect">
-                <input type="checkbox">
+                <input type="checkbox" name="sat" value=5>
                 <span class="checkmark">Sat</span>
               </label>
               <label class="dayselect">
-                <input type="checkbox">
+                <input type="checkbox" name="sun" value=6>
                 <span class="checkmark">Sun</span>
               </label>
             </div>
