--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/page1.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/control.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/settime.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/setcondition.css') }}">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- Required meta tags -->
