--- a/templates/control.html
+++ b/templates/control.html
@@ -21,8 +21,8 @@
       <div class="btn-box" >
           <div class="status d-flex align-items-end flex-column bd-highlight mb-3">
             <div class="align-self-center">
-                <a href="/object/{{object.obj_id}}/status/open"><button class="btn">Open</button></a>
-                <a href="/object/{{object.obj_id}}/status/close"><button class="btn">Close</button></a>
+                <a href="/object/{{object.obj_id}}/status/open"><button class="btn-control">Open</button></a>
+                <a href="/object/{{object.obj_id}}/status/close"><button class="btn-control">Close</button></a>
             </div>
           </div>
       </div>
