--- a/static/css/settime.css
+++ b/static/css/settime.css
@@ -22,8 +22,7 @@
 }
 
 .cardsetup-box {
-    background-color: #3b3c42;
-    // background-color: #2e2f33;
+    background-color: #2e2f33;
     border: 2px solid;
     border-color: rgb(235, 254, 255);
     box-shadow: 0px 0px 5px 1px rgb(0, 255, 242);
@@ -128,7 +127,6 @@
   border-color: #595959;
   border-radius: 50%;
   text-align: center;
-  justify-content: center;
   font-size: 15px;
 }
 
