finish adding new templates

--- a/static/css/setcondition.css
+++ b/static/css/setcondition.css
@@ -35,7 +35,9 @@
     border: 2px solid;
     border-color: #2e2f33;
     border-radius: 50%;
+    margin-bottom: 20px;
 }
+
 .flex-left{
     display: flex;
     justify-content: left;
