--- a/templates/page1.html
+++ b/templates/page1.html
@@ -25,7 +25,7 @@
                             <div class="align-self-center">
                                 <a href="/object/{{object.obj_id}}/status/open"><button type="button" class="btn btn-primary" style="border-radius: 100px;">Open</button></a>
                                 <a href="/object/{{object.obj_id}}/status/close"><button type="button" class="btn btn-success"  style="border-radius: 100px;">Close</button></a>
-                                <a href="/object/{{object.obj_id}}/setup"><button type="button" class="btn btn-secondary"  style="border-radius: 100px;">Setup</button></a>
+                                <a href="/object/{{object.obj_id}}"><button type="button" class="btn btn-secondary"  style="border-radius: 100px;">Setup</button></a>
                             </div>
                         </div>
                     </div>
