--- a/templates/setcondition.html
+++ b/templates/setcondition.html
@@ -6,41 +6,44 @@
 
 {% block body %}
     <div class="head" >
+        <a href="/object/{{id}}">
         <button class="head-icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-left-circle" viewBox="0 0 16 16" color="white">
                 <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
             </svg>
         </button>
-        <h1 class="head-text" >Window 1 Control</h1>
+        </a>
+        <h1 class="head-text" >{{name}} Control</h1>
     </div>
 
     <div class="container">
       <h3 class="">Setup</h3>
+
       <div class="card-box" >
-        {% for object in objects %}
-        <br>
+          {% for object in objects %}
+         <br>
         <div class="row d-flex align-items-center" >
           <div class="col-3 col-md-1 ">
-              <p>Open</p>
+              <p>{{object.obj_setup_status}}</p>
           </div>
           <div class="col-3 col-md-1  ">
             <p>when</p>
           </div>
-          <div class="col-4 col-md-2  ">
-            <p>humidity </p>
+          <div class="col-5 col-md-2  ">
+            <p>{{get_sensor_name_by_setup_id(object.obj_id)}} </p>
           </div>
-          <div class="col-3 col-md-2  ">
-            <p>is more </p>
+          <div class="col">
+            <p>is {{object.obj_setup_sign}}</p>
           </div>
-          <div class="col-4 col-md-3 ">
+          <div class="col oneline">
             <p>than or equal to </p>
           </div>
-          <div class="col-2 col-md-2 ">
-            <p>25 c</p>
+          <div class="col">
+            <p>{{object.obj_setup_value}} {{get_sensor_unit_by_setup_id(object.obj_id)}}</p>
           </div>
-          <div class="col-2 col-md-1 flex-left">
-            <button class="btn-del">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16" color="white">
+          <div class="col">
+            <button class="btn-del" >
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16" color="white" >
                 <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
               </svg>
             </button>
@@ -64,9 +67,9 @@
                 <label>When </label>
               </div>
 
-              <div class="col">
-                <div class="custom-select" style=>
-                  <select id="id" name="id">
+              <div class="col-5 col-md-2">
+                <div class="custom-select" >
+                  <select id="id" name="id" style="width:140px;">
                     {% for sensor in sensors %}
                     <option value="{{sensor.obj_id}}">{{ sensor.sensor_name }} {{sensor.sensor_unit}}</option>
                     {% endfor %}
@@ -109,4 +112,4 @@
 
       </div>
     </div>
-    {% endblock %}
+{% endblock %}
